fixed people talk alignment on mobile - center

--- a/src/components/Reviews/Reviews.module.scss
+++ b/src/components/Reviews/Reviews.module.scss
@@ -7,6 +7,7 @@
 
             p {
                 line-height: 30px;
+                text-align: center;
             }
         }
 
